<resources>
    <string name="app_name">MyFITapp</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_calories">Calories</string>
    <string name="profile">Profile</string>
    <string name="options">Options</string>
    <string name="title_activity_login">MyFITapp Login</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="registered">Already registered</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="unit_header">Unit of measure</string>

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="height">Height (in cm)</string>
    <string name="weight">Weight (in kg)</string>
    <string name="speed">Speed</string>
    <string name="calories">Calories</string>
    <string name="notifications">Notifications</string>
    <string name="modProfile">Edit your profile</string>
    <string name="title_activity_registration">MyFITapp Registration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="user_ID">User_ID</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="activity_level">Activity level</string>
    <string name="IMC">IMC</string>
    <string name="level_sportivo">Sporty</string>
    <string name="level_attivo">Active</string>
    <string name="Button_confirm">Confirm</string>
    <string name="add_photo">Add a photo</string>
    <string name="logout">Logout</string>
    <string name="annulla">Cancel</string>
    <string name="level_sedentario">Sedentary</string>
    <string name="title_activity_profile">Profile</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="modify_photo">Edit photo</string>
    <!-- Strings used for fragments for navigation -->

    <string name="register">sign up</string>
    <string name="not_registered">Not registered</string>
    <string name="reset_my_password">Reset Password</string>
    <string name="scegli_data">Choose your date of birth</string>
    <string name="ok_confirm">Ok</string>
    <string name="edit_activity_level">Edit Activity Level</string>
    <string name="edit_height">Edit Height</string>
    <string name="edit_weight">Edit Weight</string>
    <string name="edit_surname">Edit Surname</string>
    <string name="edit_name">Edit Name</string>
    <string name="get_confidence">Get confidence</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="daily_steps_string">Daily steps</string>
    <string name="rimanenti">Remaining</string>
    <string name="delete">Delete your Account</string>
    <string name="reset">Reset Password</string>
    <string name="deleteAccount">Do you want delete your Account?</string>
    <string name="calorie_count">Calories count</string>
    <string name="start_activity">Start a new activity</string>
    <string name="daily_activity">"Activity "</string>
    <string name="walking_distance">Distance</string>
    <string name="cycling_distance">Cycling distance</string>
    <string name="steps">Steps</string>
    <string name="food">Food</string>
    <string name="excercize">Excercize</string>
    <string name="weekly_activity_report">Weekly activity report</string>
    <string name="weekly_report">Weekly report</string>
    <string name="add_calories_consumed">Add calories consumed</string>
    <string name="email_empty">Please enter your Email</string>
    <string name="email_sent">Email sent....</string>
    <string name="pwd_empty">Please enter your Password</string>
    <string name="pwd_length">Password must be more than 8 digit</string>
    <string name="error">ERROR</string>

    <string name="name_empty">Please enter your Name</string>
    <string name="surname_empty">Please enter your Surname</string>
    <string name="date_empty">Please enter your Date of birth</string>
    <string name="date_not_valid">Date of birth non valid,Please enter your Date of birth</string>
    <string name="height_empty">Please enter your Height</string>
    <string name="weight_empty">Please enter your Weight</string>
    <string name="weight_not_valid">Weight not valid, please enter your Weight</string>
    <string name="height_not_valid">Height not valid, please enter your Height</string>
    <string name="error_picture">Error: Uploading profile picture</string>
    <string name="picture_uploaded">Profile picture uploaded</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="select_picture">Please select a profile picture or Tap the sample avatar logo</string>
    <string name="information_update">User information updated</string>

    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="downstairs">Down stairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Up stairs</string>
    <string name="walking">Walking</string>
    <string name="prediction_table_description">MyFITapp is based on the use of a library that predicts the activity carried out through the use of Machine Learning. The table shows the probabilities of the activity that is taking place</string>
    <string name="activity_done_daily">Daily activity carried out during the week</string>
    <string name="time">Time</string>
    <string name="stop">Stop activity</string>
    <string name="timer">00:00:00</string>
    <string name="distance">Distance</string>
    <string name="insert_calorie">Insert what you ate</string>
    <string name="cal_per100g">Calories per 100g</string>
    <string name="totCalorie">Total calories</string>
    <string name="calBruciate">Consumed calories</string>
    <string name="calAssunte">Assumed calories</string>
</resources>