<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/unit_header">

        <ListPreference
            app:defaultValue="false"
            app:entries="@array/um_altezza"
            app:entryValues="@array/um_altezza"
            app:key="@string/height"
            app:title="@string/height"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="kg"
            app:entries="@array/um_peso"
            app:entryValues="@array/um_peso"
            app:key="@string/weight"
            app:title="@string/weight"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="km"
            app:entries="@array/um_distanza"
            app:entryValues="@array/um_distanza"
            app:key="@string/distance"
            app:title="@string/distance"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="m/s"
            app:entries="@array/um_velocità"
            app:entryValues="@array/um_velocità"
            app:key="@string/speed"
            app:title="@string/speed"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="kcal"
            app:entries="@array/um_calorie"
            app:entryValues="@array/um_calorie"
            app:key="@string/calories"
            app:title="@string/calories"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="@string/notifications" />
    </PreferenceCategory>
    
</PreferenceScreen>