<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/addPhotoImage"
                    android:layout_width="99dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

                <TextView
                    android:id="@+id/editPhotoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modify_photo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addPhotoImage" />

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editPhotoText">

                    <TableRow
                        android:id="@+id/id_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/input_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textWebEmailAddress" />

                    </TableRow>
                    <TableRow
                        android:id="@+id/id_surname"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/surname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/surname" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/input_surname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textWebEmailAddress" />

                    </TableRow>


                    <TableRow
                        android:id="@+id/id_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prompt_email" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/view_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </TableRow>


                    <TableRow
                        android:id="@+id/id_sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/sex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sex" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/input_sex"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/sesso" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/id_age"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_birth" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/input_date_TextView"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <Button
                            android:id="@+id/calendarButton"
                            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
                            android:layout_width="37dp"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_baseline_edit_calendar_24"
                            app:iconTint="#81000000" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/id_weight"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/input_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textShortMessage" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/id_height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/input_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/id_actvity_level"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/activity_level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_level" />

                        <Space
                            android:layout_width="18dp"
                            android:layout_height="wrap_content" />

                        <Spinner
                            android:id="@+id/input_activityLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:entries="@array/livello_attività" />
                    </TableRow>
                </TableLayout>

                <Button
                    android:id="@+id/button_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="60dp"
                    android:text="@string/Button_confirm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>