<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:id="@+id/tableLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="#41EDEDED"
                    android:padding="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TableRow
                        android:id="@+id/title_row"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/secondaryLightColor_cobalto"
                        android:fadingEdge="none"
                        android:padding="20dp"
                        android:textAlignment="center">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/activity"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="168dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/probability"
                            android:textAlignment="center"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/downstairs_row"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/downstairs_title"
                            android:layout_width="128dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/downstairs"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/downstairs_prob"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/jogging_row"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/jogging_title"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/jogging"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/jogging_prob"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/sitting_row"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/sitting_title"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/sitting"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/sitting_prob"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/standing_row"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/standing_title"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/standing"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/standing_prob"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/upstairs_row"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/upstairs_title"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/upstairs"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/upstairs_prob"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/walking_row"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="20dp">

                        <TextView
                            android:id="@+id/walking_title"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/walking"
                            android:textAlignment="center"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/walking_prob"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-light"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:text="@string/prediction_table_description"
                    android:textAlignment="viewStart"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>